minor changes to function parser