@@ -3,9 +3,7 @@ package logic.parser;
 import component.api.CellType;
 import component.sheet.api.Sheet;
 import logic.function.Function;
-import logic.function.math.Abs;
-import logic.function.math.Minus;
-import logic.function.math.Plus;
+import logic.function.math.*;
 import logic.function.returnable.SpecialValue;
 import logic.function.string.Concat;
 import logic.function.string.Sub;
@@ -16,202 +14,291 @@ import java.util.List;
 import java.util.Stack;
 
 public enum FunctionParser {
-
-    IDENTITY {
+        IDENTITY{
         @Override
-        public Function parse(List<java.lang.String> arguments) {
+        public Function parse(List<String> arguments) {
             if (arguments.size() != 1) {
-                throw new IllegalArgumentException("Invalid number of arguments for IDENTITY function. Expected 1, but got " + arguments.size());
+                throw new IllegalArgumentException("Invalid number of arguments for IDENTITY function." +
+                        " Expected 1, but got " + arguments.size());
             }
-            java.lang.String actualValue = arguments.get(0).trim();
 
-            if(actualValue.isEmpty()){
-                return new Identity(actualValue, CellType.NO_VALUE);
-            }
-            else if (isBoolean(actualValue)) {
-                return new Identity(Boolean.parseBoolean(actualValue), CellType.BOOLEAN);
-            } else if (isNumeric(actualValue)) {
-                return new Identity(Double.parseDouble(actualValue), CellType.NUMERIC);
+            String value = arguments.getFirst();
+            if (value.isEmpty()) {
+                return new Identity(value, CellType.NO_VALUE);
+            } else if (isBoolean(value)) {
+                return new Identity(Boolean.parseBoolean(value), CellType.BOOLEAN);
+            } else if (isNumber(value)) {
+                return new Identity(Double.parseDouble(value), CellType.NUMERIC);
             } else {
-                return new Identity(actualValue, CellType.STRING);
+                return new Identity(value, CellType.STRING);
             }
         }
 
-        private boolean isBoolean(java.lang.String value) {
-            return "true".equalsIgnoreCase(value) || "false".equalsIgnoreCase(value);
+        private boolean isBoolean(String value) {
+            return value.equalsIgnoreCase("true") || value.equalsIgnoreCase("false");
         }
 
-        private boolean isNumeric(java.lang.String value) {
+        private boolean isNumber(String value) {
             try {
                 Double.parseDouble(value);
-                return true;
+                return value.equals(value.trim());
             } catch (NumberFormatException e) {
                 return false;
             }
         }
     },
-
-    ABS {
+    ABS{
         @Override
         public Function parse(List<String> arguments) {
-            // validations of the function (e.g. number of arguments)
             if (arguments.size() != 1) {
-                throw new IllegalArgumentException("Invalid number of arguments for PLUS function. Expected 2, but got " + arguments.size());
+                throw new IllegalArgumentException("Invalid number of arguments for ABS function." +
+                        " Expected 1, but got " + arguments.size());
             }
 
-            // structure is good. parse arguments
-            Function firstArgument = parseFunction(arguments.get(0).trim());
-            boolean validType = firstArgument.returnType().equals(CellType.NUMERIC) ||
-                    firstArgument.returnType().equals(CellType.UNKOWN);
+            Function argument = parseFunction(arguments.getFirst());
 
-            if (!validType){
-                throw new IllegalArgumentException("Invalid argument type for ABS function." +
-                        " Expected NUMERIC but got " + firstArgument.getFunctionName());
+            CellType type = argument.getReturnType();
+
+            if (!type.equals(CellType.NUMERIC) && !type.equals(CellType.UNKNOWN)) {
+                throw new IllegalArgumentException("Invalid argument types for ABS function." +
+                        " Expected NUMERIC, but got " + argument.getReturnType());
             }
 
-            return new Abs(firstArgument);
+            return new Abs(argument);
         }
     },
-
-    PLUS {
+    DIVIDE{
         @Override
         public Function parse(List<String> arguments) {
-            // validations of the function (e.g. number of arguments)
             if (arguments.size() != 2) {
-                throw new IllegalArgumentException("Invalid number of arguments for PLUS function. Expected 2, but got " + arguments.size());
+                throw new IllegalArgumentException("Invalid number of arguments for DIVIDE function." +
+                        " Expected 2, but got " + arguments.size());
             }
 
-            // structure is good. parse arguments
-            Function firstArgument = parseFunction(arguments.get(0).trim());
-            Function secondArgument = parseFunction(arguments.get(1).trim());
-            boolean firstArgumentValid = firstArgument.returnType().equals(CellType.NUMERIC) ||
-                    firstArgument.returnType().equals(CellType.UNKOWN);
-            boolean secondArgumentValid = secondArgument.returnType().equals(CellType.NUMERIC) ||
-                    secondArgument.returnType().equals(CellType.UNKOWN);
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
 
-            if(!firstArgumentValid || !secondArgumentValid) {
-                throw new IllegalArgumentException("Invalid argument types for PLUS function." +
-                        " Expected NUMERIC, but got " + firstArgument.getFunctionName() +
-                        " and " + secondArgument.getFunctionName());
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.NUMERIC) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN))) {
+                throw new IllegalArgumentException("Invalid argument types for DIVIDE function." +
+                        " Expected NUMERIC, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
             }
 
-            return new Plus(firstArgument, secondArgument);
+            return new Divide(firstArgument, secondArgument);
         }
     },
-
-    MINUS {
+    MINUS{
         @Override
         public Function parse(List<String> arguments) {
-            // validations of the function (e.g. number of arguments)
             if (arguments.size() != 2) {
-                throw new IllegalArgumentException("Invalid number of arguments for PLUS function. Expected 2, but got " + arguments.size());
+                throw new IllegalArgumentException("Invalid number of arguments for MINUS function." +
+                        " Expected 2, but got " + arguments.size());
             }
 
-            // structure is good. parse arguments
-            Function firstArgument = parseFunction(arguments.get(0).trim());
-            Function secondArgument = parseFunction(arguments.get(1).trim());
-            boolean firstArgumentValid = firstArgument.returnType().equals(CellType.NUMERIC) ||
-                    firstArgument.returnType().equals(CellType.UNKOWN);
-            boolean secondArgumentValid = secondArgument.returnType().equals(CellType.NUMERIC) ||
-                    secondArgument.returnType().equals(CellType.UNKOWN);
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
 
-            if (!firstArgumentValid || !secondArgumentValid) {
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.NUMERIC) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN))) {
                 throw new IllegalArgumentException("Invalid argument types for MINUS function." +
-                        " Expected NUMERIC, but got " + firstArgument.getFunctionName() +
-                        " and " + secondArgument.getFunctionName());
+                        " Expected NUMERIC, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
             }
 
             return new Minus(firstArgument, secondArgument);
         }
     },
-
-    CONCAT {
+    MOD{
         @Override
         public Function parse(List<String> arguments) {
-            // validations of the function (e.g. number of arguments)
             if (arguments.size() != 2) {
-                throw new IllegalArgumentException("Invalid number of arguments for PLUS function. Expected 2, but got " + arguments.size());
+                throw new IllegalArgumentException("Invalid number of arguments for MOD function." +
+                        " Expected 2, but got " + arguments.size());
             }
 
-            // structure is good. parse arguments
-            Function firstArgument = parseFunction(arguments.get(0).trim());
-            Function secondArgument = parseFunction(arguments.get(1).trim());
-            boolean firstArgumentValid = firstArgument.returnType().equals(CellType.STRING) ||
-                    firstArgument.returnType().equals(CellType.UNKOWN);
-            boolean secondArgumentValid = secondArgument.returnType().equals(CellType.STRING) ||
-                    secondArgument.returnType().equals(CellType.UNKOWN);
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
 
-            if (!firstArgumentValid || !secondArgumentValid) {
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.NUMERIC) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN))) {
+                throw new IllegalArgumentException("Invalid argument types for MOD function." +
+                        " Expected NUMERIC, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
+            }
+
+            return new Mod(firstArgument, secondArgument);
+        }
+    },
+    PLUS{
+        @Override
+        public Function parse(List<String> arguments) {
+            if (arguments.size() != 2) {
+                throw new IllegalArgumentException("Invalid number of arguments for PLUS function." +
+                        " Expected 2, but got " + arguments.size());
+            }
+
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
+
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.NUMERIC) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN))) {
+                throw new IllegalArgumentException("Invalid argument types for PLUS function." +
+                        " Expected NUMERIC, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
+            }
+
+            return new Plus(firstArgument, secondArgument);
+        }
+    },
+    POW{
+        @Override
+        public Function parse(List<String> arguments) {
+            if (arguments.size() != 2) {
+                throw new IllegalArgumentException("Invalid number of arguments for POW function." +
+                        " Expected 2, but got " + arguments.size());
+            }
+
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
+
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.NUMERIC) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN))) {
+                throw new IllegalArgumentException("Invalid argument types for POW function." +
+                        " Expected NUMERIC, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
+            }
+
+            return new Pow(firstArgument, secondArgument);
+        }
+    },
+    TIMES{
+        @Override
+        public Function parse(List<String> arguments) {
+            if (arguments.size() != 2) {
+                throw new IllegalArgumentException("Invalid number of arguments for TIMES function." +
+                        " Expected 2, but got " + arguments.size());
+            }
+
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
+
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.NUMERIC) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN))) {
+                throw new IllegalArgumentException("Invalid argument types for TIMES function." +
+                        " Expected NUMERIC, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
+            }
+
+            return new Times(firstArgument, secondArgument);
+        }
+    },
+    CONCAT{
+        @Override
+        public Function parse(List<String> arguments) {
+            if (arguments.size() != 2) {
+                throw new IllegalArgumentException("Invalid number of arguments for CONCAT function." +
+                        " Expected 2, but got " + arguments.size());
+            }
+
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.getLast());
+
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.STRING) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.STRING) && !secondArgType.equals(CellType.UNKNOWN))) {
                 throw new IllegalArgumentException("Invalid argument types for CONCAT function." +
-                        " Expected STRING, but got " + firstArgument.getFunctionName() +
-                        " and " + secondArgument.getFunctionName());
+                        " Expected STRING, but got " + firstArgument.getReturnType() +
+                        " and " + secondArgument.getReturnType());
             }
 
             return new Concat(firstArgument, secondArgument);
         }
     },
-
-    SUB {
+    SUB{
         @Override
         public Function parse(List<String> arguments) {
-            // validations of the function (e.g. number of arguments)
             if (arguments.size() != 3) {
-                throw new IllegalArgumentException("Invalid number of arguments for PLUS function. Expected 2, but got " + arguments.size());
+                throw new IllegalArgumentException("Invalid number of arguments for SUB function." +
+                        " Expected 3, but got " + arguments.size());
             }
 
-            // structure is good. parse arguments
-            Function firstArgument = parseFunction(arguments.get(0).trim());
-            Function secondArgument = parseFunction(arguments.get(1).trim());
-            Function thirdArgument = parseFunction(arguments.get(2).trim());
-            boolean firstArgumentValid = firstArgument.returnType().equals(CellType.STRING) ||
-                    firstArgument.returnType().equals(CellType.UNKOWN);
-            boolean secondArgumentValid = secondArgument.returnType().equals(CellType.NUMERIC) ||
-                    secondArgument.returnType().equals(CellType.UNKOWN);
-            boolean thirdArgumentValid = thirdArgument.returnType().equals(CellType.NUMERIC) ||
-                    thirdArgument.returnType().equals(CellType.UNKOWN);
+            Function firstArgument = parseFunction(arguments.getFirst());
+            Function secondArgument = parseFunction(arguments.get(1));
+            Function thirdArgument = parseFunction(arguments.getLast());
 
-            if (!firstArgumentValid || !secondArgumentValid || !thirdArgumentValid){
-                throw new IllegalArgumentException("Invalid argument types for CONCAT function." +
-                        " Expected STRING but got " + firstArgument.getFunctionName() +
-                        "expected NUMERIC but got" + secondArgument.getFunctionName() + "and" + thirdArgument.getFunctionName());
+            CellType firstArgType = firstArgument.getReturnType();
+            CellType secondArgType = secondArgument.getReturnType();
+            CellType thirdArgType = thirdArgument.getReturnType();
+
+            if ((!firstArgType.equals(CellType.STRING) && !firstArgType.equals(CellType.UNKNOWN)) ||
+                    (!secondArgType.equals(CellType.NUMERIC) && !secondArgType.equals(CellType.UNKNOWN)) ||
+                    (!thirdArgType.equals(CellType.NUMERIC) && !thirdArgType.equals(CellType.UNKNOWN))) {
+                throw new IllegalArgumentException("Invalid argument types for SUB function." +
+                        " Expected STRING, NUMERIC and NUMERIC, but got " + firstArgument.getReturnType() +
+                        ", " + secondArgument.getReturnType() + " and " + thirdArgument.getReturnType());
             }
 
             return new Sub(firstArgument, secondArgument, thirdArgument);
         }
     },
-
     REF{
         @Override
         public Function parse(List<String> arguments) {
-            if(arguments.size() != 1) {
-                    throw new IllegalArgumentException("Invalid number of arguments for REF function. Expected 1, but got " + arguments.size());
+            if (arguments.size() != 1) {
+                throw new IllegalArgumentException("Invalid number of arguments for REF function." +
+                        " Expected 1, but got " + arguments.size());
             }
 
-            String target = arguments.get(0).trim();
-
-            if(!Sheet.isValidCellID(target)){
-                throw new IllegalArgumentException("Invalid argument for REF function expected a valid cell ID but got" + target);
-
+            String target = arguments.getFirst();
+            if (!Sheet.isValidCellID(target)) {
+                throw new IllegalArgumentException("Invalid argument for REF function." +
+                        " Expected a valid cell ID, but got " + target);
             }
 
             return new Ref(target);
         }
     };
 
-    public static Function parseFunction(String input) {
-        if (input.startsWith("{") && input.endsWith("}")) {
-            java.lang.String functionNameAndContent = input.substring(1, input.length() - 1);
-            List<java.lang.String> topLevelParts = parseMainParts(functionNameAndContent);
-            java.lang.String functionName = topLevelParts.get(0).toUpperCase();
-            topLevelParts.remove(0);
+    abstract public Function parse(List<String> arguments);
+
+    public static Function parseFunction(String input){
+        if(input.startsWith("{") && input.endsWith("}")){
+
+            String functionContent = input.substring(1, input.length() - 1);
+            List<String> topLevelParts = parseMainParts(functionContent);
+
+            String functionName = topLevelParts.getFirst().trim().toUpperCase();
+
+            topLevelParts.removeFirst();
             return FunctionParser.valueOf(functionName).parse(topLevelParts);
-        } else {
-            return FunctionParser.IDENTITY.parse(List.of(input.trim()));
         }
+
+        return FunctionParser.IDENTITY.parse(List.of(input));
     }
 
-    private static List<String> parseMainParts(java.lang.String input) {
-        List<java.lang.String> parts = new ArrayList<>();
+    private static List<String> parseMainParts(String input) {
+        List<String> parts = new ArrayList<>();
         StringBuilder buffer = new StringBuilder();
         Stack<Character> stack = new Stack<>();
 
@@ -224,7 +311,7 @@ public enum FunctionParser {
 
             if (c == ',' && stack.isEmpty()) {
                 // If we are at a comma and the stack is empty, it's a separator for top-level parts
-                parts.add(buffer.toString().trim());
+                parts.add(buffer.toString());
                 buffer.setLength(0); // Clear the buffer for the next part
             } else {
                 buffer.append(c);
@@ -232,12 +319,10 @@ public enum FunctionParser {
         }
 
         // Add the last part
-        if (buffer.length() > 0) {
-            parts.add(buffer.toString().trim());
+        if (!buffer.isEmpty()) {
+            parts.add(buffer.toString());
         }
 
         return parts;
     }
-
-    public abstract Function parse(List<String> arguments);
 }
